# concurrencpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  clang-format  concurrencpp.sln
concurrencpp/: CMakeLists.txt  concurrencpp.vcxproj  concurrencpp.vcxproj.filters
concurrencpp/details/: errors.h  forward_declerations.h  platform_defs.h
concurrencpp/details/executors/: constants.h  executors.cpp  executors.h  task.h
concurrencpp/details/result/: coroutines.h  executor_exception.h
concurrencpp/details/runtime/: constants.h  runtime.cpp
concurrencpp/details/threads/: constants.h  single_worker_thread.cpp  single_worker_thread.h  thread_group.cpp  thread_group.h  thread_pool.cpp  thread_pool.h  thread_pool_listener.h
concurrencpp/details/timers/: timer.cpp  timer.h  timer_queue.cpp
concurrencpp/details/utils/: array_deque.h
concurrencpp/include/: concurrencpp.h
concurrencpp/src/: errors.h
concurrencpp/src/executors/: constants.h  derivable_executor.h  executor.h  executor_all.h  executors.h  inline_executor.h  manual_executor.cpp  manual_executor.h  task.cpp  thread_executor.cpp  thread_executor.h  thread_pool_executor.cpp  thread_pool_executor.h  worker_thread_executor.cpp  worker_thread_executor.h
concurrencpp/src/result/: result.h  result_all.h  result_awaitable.h  result_fwd_declerations.h  result_state.h
concurrencpp/src/results/: constants.h  make_result.h  promises.h  result.h  result_awaitable.h  result_core.cpp  result_core.h  result_fwd_declerations.h
concurrencpp/src/runtime/: constants.h  runtime.cpp  runtime.h
concurrencpp/src/threads/: thread_pool.cpp  thread_pool.h
concurrencpp/src/timers/: constants.h  timer.cpp  timer_queue.cpp  timer_queue.h
concurrencpp/src/utils/: bind.h  scope_guard.h  spinlock.h
example/: CMakeLists.txt
example/10_regular_timer/: CMakeLists.txt
example/10_regular_timer/source/: main.cpp
example/11_oneshot_timer/: CMakeLists.txt
example/11_oneshot_timer/source/: main.cpp
example/12_delay_object/: CMakeLists.txt
example/12_delay_object/source/: main.cpp
example/13_generator/: CMakeLists.txt
example/13_generator/source/: main.cpp
example/1_hello_world/: CMakeLists.txt
example/1_hello_world/source/: main.cpp
example/2_concurrent_even_number_counting/: CMakeLists.txt
example/2_concurrent_even_number_counting/source/: main.cpp
example/3_async_file_processing/: CMakeLists.txt
example/3_async_file_processing/source/: main.cpp
example/4_async_file_processing_version_2/: CMakeLists.txt
example/4_async_file_processing_version_2/source/: main.cpp
example/5_prime_number_finder/: CMakeLists.txt
example/5_prime_number_finder/source/: main.cpp
example/6_manual_executor/: CMakeLists.txt
example/6_manual_executor/source/: main.cpp
example/7_when_all/: CMakeLists.txt
example/7_when_all/source/: main.cpp
example/8_when_any/: CMakeLists.txt
example/8_when_any/source/: main.cpp
example/9_result_promise/: CMakeLists.txt
example/9_result_promise/source/: main.cpp
example/async_file_processing/: CMakeLists.txt
example/async_file_processing/source/: main.cpp
example/async_sql/: CMakeLists.txt
example/async_sql/include/: mock_async_sql.h
example/async_sql/source/: main.cpp  mock_async_sql.cpp
example/process_monitor/: CMakeLists.txt
example/process_monitor/include/: mock_process_monitor.h
example/process_monitor/source/: main.cpp  mock_process_monitor.cpp
example/synchronous_web_socket/: CMakeLists.txt
example/synchronous_web_socket/include/: mock_web_socket.h
example/synchronous_web_socket/source/: main.cpp  mock_web_socket.cpp
example/synchronous_web_socket/src/: mock_web_socket.h
examples/async_file_processing/: CMakeLists.txt  async_file_processing.vcxproj  async_file_processing.vcxproj.filters
examples/async_file_processing/src/: main.cpp
examples/async_sql/: CMakeLists.txt  async_sql.vcxproj  async_sql.vcxproj.filters
examples/async_sql/src/: main.cpp  mock_async_sql.cpp  mock_async_sql.h
examples/process_monitor/: CMakeLists.txt  process_monitor.vcxproj  process_monitor.vcxproj.filters
examples/process_monitor/src/: main.cpp  mock_process_monitor.cpp  mock_process_monitor.h
examples/synchronous_web_socket/: CMakeLists.txt  synchronous_web_socket.vcxproj  synchronous_web_socket.vcxproj.filters
examples/synchronous_web_socket/src/: main.cpp  mock_web_socket.cpp
sandbox/: CMakeLists.txt  main.cpp  sandbox.vcxproj
test/: CMakeLists.txt
test/helpers/: assertions.h  object_observer.cpp
test/include/helpers/: assertions.h  object_observer.h  random.h  result_generator.h  thread_helpers.h
test/include/infra/: assertions.h
test/include/tester/: tester.h
test/include/tests/: all_tests.h
test/include/utils/: custom_exception.h  object_observer.h  random.h  test_generators.h  test_ready_lazy_result.h  test_ready_result.h  test_thread_callbacks.h  throwing_executor.h  wait_context.h
test/source/: main.cpp
test/source/helpers/: assertions.cpp  object_observer.cpp
test/source/infra/: assertions.cpp  tester.cpp
test/source/tester/: tester.cpp
test/source/tests/: all_tests.cpp  async_condition_variable_tests.cpp  async_lock_tests.cpp  atomic_wait_tests.cpp  runtime_tests.cpp  scoped_async_lock_tests.cpp  task_tests.cpp
test/source/thread_sanitizer/: async_condition_variable.cpp  async_lock.cpp  executors.cpp  fibbonacci.cpp  fibonacci.cpp  lazy_fibonacci.cpp  matrix_multiplication.cpp  quick_sort.cpp  result.cpp  shared_result.cpp  when_all.cpp  (+1 more)
test/tests/: runtime_tests.cpp
test/thread_sanitizer/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  tests.vcxproj  tests.vcxproj.filters
tests/helpers/: assertions.cpp  assertions.h  fast_randomizer.h  object_observer.cpp  object_observer.h  random.h  result_generator.h  thread_helpers.h
tests/tester/: tester.cpp  tester.h
tests/tests/: all_tests.cpp  all_tests.h  array_deque_tests.cpp  spin_lock_tests.cpp  task_tests.cpp  timer_tests.cpp
thread_sanitizers/executors/: CMakeLists.txt  main.cpp
thread_sanitizers/fibbonacci/: CMakeLists.txt
(+217 files in other folders)
